debugging teacher.js

--- a/src/main/resources/templates/teacher.html
+++ b/src/main/resources/templates/teacher.html
@@ -8,6 +8,7 @@
             href="https://use.fontawesome.com/f2bdd0ae67.js"></script>
     <link th:href="@{https://fonts.googleapis.com/css?family=Signika:300,400,700}"
           href="https://fonts.googleapis.com/css?family=Signika:300,400,700" rel="stylesheet"/>
+          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" th:href="@{https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css}">
     <link rel="stylesheet" th:href="@{/css/normalize.css}" href="../static/css/normalize.css"/>
     <link rel="stylesheet" th:href="@{/css/easy-autocomplete.css}" href="../static/css/easy-autocomplete.css"/>
     <link rel="stylesheet" th:href="@{/css/hopscotch.css}" href="../static/css/hopscotch.css"/>
