--- a/src/main/resources/static/css/partials/_loginModal.scss
+++ b/src/main/resources/static/css/partials/_loginModal.scss
@@ -22,7 +22,14 @@
     background: #fff;
     border-top: 10px solid $secondary;
     border-bottom: 10px solid $secondary;
-    // box-shadow: 5px 5px 5px #ccc;
+    box-shadow: 5px 5px 5px #ccc;
+
+    .fa-times {
+      position: absolute;
+      right: 15px;
+      top: 5px;
+      font-size: 30px;
+    }
 
     .update {
         display: inline-block;
@@ -33,19 +40,4 @@
         text-decoration: none;
     }
   }
-}
-
-.fa-times {
-  position: absolute;
-  right: 15px;
-  top: 5px;
-  font-size: 30px;
-  text-shadow: 2px 2px #ddd;
-}
-
-.fa-times:hover,
-.fa-times:focus{
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
 }
