--- a/src/main/resources/static/css/partials/_teacher.scss
+++ b/src/main/resources/static/css/partials/_teacher.scss
@@ -68,6 +68,7 @@
   .deletebutton {
     cursor: pointer;
     font-weight: 700;
+    font-size: 1rem;
     font-family: 'Signika', sans-serif;
     position: relative;
     left: -12px;
