--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -120,6 +120,7 @@ nav ul li {
   #studentNameArea .deletebutton {
     cursor: pointer;
     font-weight: 700;
+    font-size: 1rem;
     font-family: 'Signika', sans-serif;
     position: relative;
     left: -12px;
@@ -306,7 +307,13 @@ div.hopscotch-bubble .hopscotch-nav-button.next {
     color: #2b2e38;
     background: #fff;
     border-top: 10px solid #e88510;
-    border-bottom: 10px solid #e88510; }
+    border-bottom: 10px solid #e88510;
+    box-shadow: 5px 5px 5px #ccc; }
+    .remodal .modal-content .fa-times {
+      position: absolute;
+      right: 15px;
+      top: 5px;
+      font-size: 30px; }
     .remodal .modal-content .update {
       display: inline-block;
       min-width: 110px;
@@ -314,19 +321,6 @@ div.hopscotch-bubble .hopscotch-nav-button.next {
       text-align: center;
       vertical-align: middle;
       text-decoration: none; }
-
-.fa-times {
-  position: absolute;
-  right: 15px;
-  top: 5px;
-  font-size: 30px;
-  text-shadow: 2px 2px #ddd; }
-
-.fa-times:hover,
-.fa-times:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer; }
 
 #signUpPage section {
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -522,6 +516,15 @@ img {
 a {
   text-decoration: none;
   color: #333; }
+
+.fa-times {
+  text-shadow: 2px 2px #ddd; }
+
+.fa-times:hover,
+.fa-times:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer; }
 
 button {
   font-family: 'Signika', sans-serif;
