--- a/src/main/resources/static/css/style.scss
+++ b/src/main/resources/static/css/style.scss
@@ -71,6 +71,17 @@ a {
   color: #333;
 }
 
+.fa-times {
+  text-shadow: 2px 2px #ddd;
+}
+
+.fa-times:hover,
+.fa-times:focus{
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 button {
   font-family: 'Signika', sans-serif;
   cursor: pointer;
