--- a/src/main/resources/static/css/partials/_teacher.scss
+++ b/src/main/resources/static/css/partials/_teacher.scss
@@ -55,7 +55,9 @@
 #studentNameArea {
   font-size: .8rem;
   font-family: 'Signika', sans-serif;
-  margin: 5px 25px;
+  margin: 5px;
+  padding: 10px;
+  background: $accent;
   width: 100%;
 
   input {
@@ -63,6 +65,7 @@
     line-height: 1.6;
     padding: 5px;
     margin: 5px 0;
+    border: 1px solid $primary;
   }
 
   .deletebutton {
@@ -71,9 +74,15 @@
     font-size: 1rem;
     font-family: 'Signika', sans-serif;
     position: relative;
-    left: -12px;
-    top: -6px;
-    text-shadow: 1px 1px #ddd;
+    // text-shadow: 1px 1px #ddd;
+    border: 1px solid blue;
+
+    .fa-times {
+      position: absolute;
+      top: 0;
+      right: 0;
+      border: 1px solid red;
+    }
   }
 }
 
