added styling to studentNameArea

--- a/src/main/resources/static/css/partials/_teacher.scss
+++ b/src/main/resources/static/css/partials/_teacher.scss
@@ -56,7 +56,6 @@
   font-size: .8rem;
   font-family: 'Signika', sans-serif;
   margin: 5px;
-  padding: 10px;
   background: $accent;
   width: 100%;
 
@@ -64,24 +63,18 @@
     font-family: 'Signika', sans-serif;
     line-height: 1.6;
     padding: 5px;
-    margin: 5px 0;
+    margin: 5px;
     border: 1px solid $primary;
   }
 
   .deletebutton {
-    cursor: pointer;
-    font-weight: 700;
     font-size: 1rem;
-    font-family: 'Signika', sans-serif;
     position: relative;
-    // text-shadow: 1px 1px #ddd;
-    border: 1px solid blue;
 
     .fa-times {
       position: absolute;
-      top: 0;
-      right: 0;
-      border: 1px solid red;
+      top: -3px;
+      right: 8px;
     }
   }
 }
