--- a/src/main/resources/templates/adminpage.html
+++ b/src/main/resources/templates/adminpage.html
@@ -2,7 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Admin</title>
 </head>
 <body>
 <h3> Teacher Talk Admin Page</h3>
