--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -90,10 +90,17 @@ nav ul li {
   font-size: 1.5rem;
   margin-bottom: 15px; }
 
+.fa-eye {
+  position: absolute;
+  top: -25px;
+  right: 30px;
+  z-index: 100;
+  color: #fff; }
+
 #startTour {
   position: absolute;
-  right: 0px;
-  top: 0px;
+  top: 0;
+  right: -25px;
   min-width: 75px;
   background: #9b1c1f;
   color: #fff;
