--- a/src/main/resources/templates/teacher.html
+++ b/src/main/resources/templates/teacher.html
@@ -156,7 +156,10 @@
 
     <div class="message-container">
       <div class="message">
-        <button id="startTour">Start Tour</button>
+        <!-- <div class="tour-wrapper"> -->
+          <i class="fa fa-eye" aria-hidden="true"></i>
+          <button id="startTour">Start Tour</button>
+        <!-- </div> -->
         <div class="message-wrapper">
           <div class="container-title">New Message</div>
           <div class="input-wrapper">
