removing yellow autofill color in forms

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -567,6 +567,9 @@ button {
 input, textarea {
   outline: none; }
 
+input:-webkit-autofill {
+  color: #fff !important; }
+
 fieldset {
   border: none;
   margin: 0;
