styled changed password and find account pages

--- a/src/main/resources/static/css/partials/_login.scss
+++ b/src/main/resources/static/css/partials/_login.scss
@@ -24,7 +24,7 @@
 }
 
 .login-shape {
-  background: url("../images/login-shapes.gif");
+  background: url("../images/login-shapes-dropshadow.gif");
   background-position: center;
   background-repeat: no-repeat;
 }
