--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -249,7 +249,7 @@ div.hopscotch-bubble .hopscotch-nav-button.next {
   padding-top: 50px; }
 
 .login-shape {
-  background: url("../images/login-shapes.gif");
+  background: url("../images/login-shapes-dropshadow.gif");
   background-position: center;
   background-repeat: no-repeat; }
 
@@ -477,6 +477,21 @@ table {
   table tr:nth-of-type(even) {
     background: #ececec; }
 
+#change-password {
+  background: url("../images/login-shapes.gif");
+  background-repeat: repeat; }
+  #change-password section {
+    -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    background: #fff;
+    max-width: 1024px;
+    width: 50%;
+    margin: 25px auto 3%;
+    min-height: 650px;
+    padding: 25px;
+    text-align: center; }
+
 * {
   margin: 0;
   padding: 0; }
@@ -581,6 +596,15 @@ select:-webkit-autofill:focus {
   -webkit-text-fill-color: #00b074;
   -webkit-box-shadow: 0 0 0px 1000px #fff inset;
   transition: background-color 5000s ease-in-out 0s; }
+
+h1::selection, h2::selection, h3::selection, h4::selection, h5::selection, h6::selection, p::selection, em::selection, ul::selection, li::selection, a::selection, legend::selection, label::selection, select::selection, option::selection, button::selection, .container-title::selection, .addContact::selection, .bold::selection, img::selection {
+  background-color: #faf0a1; }
+
+h1::-moz-selection, h2::-moz-selection, h3::-moz-selection, h4::-moz-selection, h5::-moz-selection, h6::-moz-selection, p::-moz-selection, em::-moz-selection, ul::-moz-selection, li::-moz-selection, a::-moz-selection, legend::-moz-selection, label::-moz-selection, select::-moz-selection, button::-moz-selection, .container-title::-moz-selection, option::-moz-selection, .addContact::-moz-selection, .bold::-moz-selection, img::-moz-selection {
+  background-color: #faf0a1; }
+
+h1::-webkit-selection, h2::-webkit-selection, h3::-webkit-selection, h4::-webkit-selection, h5::-webkit-selection, h6::-webkit-selection, p::-webkit-selection, em::-webkit-selection, ul::-webkit-selection, li::-webkit-selection, a::-webkit-selection, legend::-webkit-selection, select::-webkit-selection, option::-webkit-selection, label::-webkit-selection, button::-webkit-selection, .container-title::-webkit-selection, .bold::-webkit-selection .addContact::-webkit-selection, img::-webkit-selection {
+  background-color: #faf0a1; }
 
 fieldset {
   border: none;
