--- a/src/main/resources/static/css/style.scss
+++ b/src/main/resources/static/css/style.scss
@@ -12,6 +12,7 @@ $accent:#ececec; //off white for background
 @import "partials/loginModal";
 @import "partials/signUpPage";
 @import "partials/history";
+@import "partials/password";
 
 * {
   margin:0;
@@ -134,6 +135,16 @@ select:-webkit-autofill:focus {
   -webkit-text-fill-color: $primary;
   -webkit-box-shadow: 0 0 0px 1000px #fff inset;
   transition: background-color 5000s ease-in-out 0s;
+}
+
+h1::selection, h2::selection, h3::selection, h4::selection, h5::selection, h6::selection, p::selection, em::selection, ul::selection, li::selection, a::selection, legend::selection, label::selection, select::selection, option::selection, button::selection, .container-title::selection, .addContact::selection, .bold::selection, img::selection {
+  background-color: $header;
+}
+h1::-moz-selection, h2::-moz-selection, h3::-moz-selection, h4::-moz-selection, h5::-moz-selection, h6::-moz-selection, p::-moz-selection, em::-moz-selection, ul::-moz-selection, li::-moz-selection, a::-moz-selection, legend::-moz-selection, label::-moz-selection, select::-moz-selection, button::-moz-selection, .container-title::-moz-selection, option::-moz-selection, .addContact::-moz-selection, .bold::-moz-selection, img::-moz-selection {
+  background-color: $header;
+}
+h1::-webkit-selection, h2::-webkit-selection, h3::-webkit-selection, h4::-webkit-selection, h5::-webkit-selection, h6::-webkit-selection, p::-webkit-selection, em::-webkit-selection, ul::-webkit-selection, li::-webkit-selection, a::-webkit-selection, legend::-webkit-selection, select::-webkit-selection, option::-webkit-selection, label::-webkit-selection, button::-webkit-selection, .container-title::-webkit-selection, .bold::-webkit-selection .addContact::-webkit-selection, img::-webkit-selection {
+  background-color: $header;
 }
 
 // Login Input/////////////
