--- a/src/main/resources/templates/changePasswordForm.html
+++ b/src/main/resources/templates/changePasswordForm.html
@@ -31,20 +31,38 @@
 
 </head>
 
-<body>
+<body id="login-page">
+  <section>
+    <div class="login-shape"></div>
 
+    <div class="login-input">
+      <div class="login-header">
+        <img src="../static/images/teacher-talk-logo.gif" th:src="${'images/teacher-talk-logo.gif'}"
+             alt="teacher talk logo"/>
+        <div class="tagline clearfix">
+            <h1>Teacher Talk</h1>
+            <h3>Empowering <span class="bold">Education</span> Through Better <span
+                      class="bold">Communication</span>.</h3>
+          </div>
+        </div>
 
-<form method="post" action="#" th:action="@{/passwordResetSubmit}">
-    <label>
-        <span>Enter Your Password: </span>
-        <input type="text" name="password"/>
-    </label>
-    <input type="hidden" name="userId" th:value="${userId}"/>
-    <input type="hidden" name="email" th:value="${email}"/>
-    <button>Submit</button>
+        <form method="post" action="#" th:action="@{/passwordResetSubmit}">
+          <legend>Reset Your Password</legend>
+          <div class="input-wrapper">
+            <input type="text" name="password"/>
+            <label id="emailLabel" for="loginEmail" class="loginEmail">Enter Password</label>
+          </div>
 
-</form>
+          <input type="hidden" name="userId" th:value="${userId}"/>
+          <input type="hidden" name="email" th:value="${email}"/>
+          <button class="update">Submit</button>
+        </form>
 
+    </div>
+  </section>
 
+  <script th:src="@{https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js}"
+          src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script th:src="@{/js/signup.js}" src="../static/js/signup.js"></script>
 </body>
 </html>
