--- a/src/main/resources/templates/forgotPasswordForm.html
+++ b/src/main/resources/templates/forgotPasswordForm.html
@@ -31,18 +31,39 @@
 
 </head>
 
-<body>
+<body id="login-page">
+  <section>
+    <div class="login-shape"></div>
 
-<form action="forgotPasswordForm.html" th:action="@{/passwordResetEmail}">
-    <fieldset>
-        <legend>Find Your Account</legend>
-        <label for="searchEmail">
-            Please enter your email address <input type="email" id="searchEmail" name="email" value=""/>
-        </label>
-    </fieldset>
-    <button>Submit</button>
-</form>
+    <div class="login-input">
+      <div class="login-header">
+        <img src="../static/images/teacher-talk-logo.gif" th:src="${'images/teacher-talk-logo.gif'}"
+             alt="teacher talk logo"/>
+        <div class="tagline clearfix">
+            <h1>Teacher Talk</h1>
+            <h3>Empowering <span class="bold">Education</span> Through Better <span
+                      class="bold">Communication</span>.</h3>
+          </div>
+        </div>
 
+        <form action="forgotPasswordForm.html" th:action="@{/passwordResetEmail}">
+            <fieldset>
+              <legend>Find Account by Your Email</legend>
 
+              <div class="input-wrapper">
+                <input type="email" id="searchEmail" name="email" value=""/>
+                <label for="searchEmail"> Enter Email Address </label>
+              </div>
+
+            </fieldset>
+            <button class="update">Submit</button>
+        </form>
+
+    </div>
+  </section>
+
+  <script th:src="@{https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js}"
+          src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script th:src="@{/js/signup.js}" src="../static/js/signup.js"></script>
 </body>
 </html>
