--- a/src/main/resources/templates/parent.html
+++ b/src/main/resources/templates/parent.html
@@ -34,14 +34,6 @@
 
   <section>
     <div class="faq">
-      <!-- <div class="faq-header">
-        <img src="../static/images/teacher-talk-logo.gif" th:src="${'/images/teacher-talk-logo.gif'}"
-           alt="teacher talk logo"/>
-        <div class="tagline">
-         <h1>Teacher Talk</h1>
-         <h3>Empowering <span class="bold">Education</span> Through Better <span class="bold">Communication</span>.</h3>
-       </div>
-      </div> -->
 
       <div class="faq-content">
         <div class="question">
@@ -136,8 +128,8 @@
               <input type="text"/>
               <label>School </label>
             </div>
-            <div class="input-wrapper">
-              <input type="text"/>
+            <div class="input-wrapper student-notes">
+              <input type="text" name="studentNotes" />
               <label>Notes </label>
             </div>
 
@@ -154,10 +146,10 @@
                 <label>Last Name </label>
               </div>
               <div class="input-wrapper">
-                <input type="text"  />
+                <input type="text" name="studentNotes" />
                 <label>School </label>
               </div>
-              <div class="input-wrapper">
+              <div class="input-wrapper student-notes">
                 <input type="text"/>
                 <label>Notes </label>
               </div>
