--- a/src/main/resources/templates/forgotPasswordForm.html
+++ b/src/main/resources/templates/forgotPasswordForm.html
@@ -51,7 +51,7 @@
               <legend>Find Account by Your Email</legend>
 
               <div class="input-wrapper">
-                <input type="email" id="searchEmail" name="email" value=""/>
+                <input type="email" id="searchEmail" name="email" />
                 <label for="searchEmail"> Enter Email Address </label>
               </div>
 
