debugging forgotPasswordForm page

--- a/src/main/resources/templates/forgotPasswordForm.html
+++ b/src/main/resources/templates/forgotPasswordForm.html
@@ -31,7 +31,7 @@
 
 </head>
 
-<body id="login-page">
+<!-- <body id="login-page">
   <section>
     <div class="login-shape"></div>
 
@@ -65,5 +65,21 @@
   <script th:src="@{https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js}"
           src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script th:src="@{/js/signup.js}" src="../static/js/signup.js"></script>
+</body> -->
+
+<body>
+
+<form action="forgotPasswordForm.html" th:action="@{/passwordResetEmail}">
+    <fieldset>
+        <legend>Find Your Account</legend>
+        <label for="searchEmail">
+            Please enter your email address <input type="email" id="searchEmail" name="email" value=""/>
+        </label>
+    </fieldset>
+    <button>Submit</button>
+</form>
+
+
 </body>
+
 </html>
