debugging forgotPasswordForm page

--- a/src/main/resources/templates/forgotPasswordForm.html
+++ b/src/main/resources/templates/forgotPasswordForm.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,10 +7,10 @@
     <script th:href="@{https://use.fontawesome.com/f2bdd0ae67.js}" src="https://use.fontawesome.com/f2bdd0ae67.js"></script>
     <link th:href="@{https://fonts.googleapis.com/css?family=Signika:300,400,700}" href="https://fonts.googleapis.com/css?family=Signika:300,400,700" rel="stylesheet"/>
     <link rel="stylesheet" th:href="@{/css/normalize.css}" href="../static/css/normalize.css"/>
-    <link rel="stylesheet" th:href="@{/css/style.css}" href="../static/css/style.css"/>
+    <link rel="stylesheet" th:href="@{/css/style.css}" href="../static/css/style.css"/> -->
 
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="57x57" href="../static/images/favicon/apple-icon-57x57.png" th:href="@{/images/favicon/apple-icon-57x57.png}" />
+    <!-- <link rel="apple-touch-icon" sizes="57x57" href="../static/images/favicon/apple-icon-57x57.png" th:href="@{/images/favicon/apple-icon-57x57.png}" />
     <link rel="apple-touch-icon" sizes="60x60" href="../static/images/favicon/apple-icon-60x60.png" th:href="@{/images/favicon/apple-icon-60x60.png}" />
     <link rel="apple-touch-icon" sizes="72x72" href="../static/images/favicon/apple-icon-72x72.png" th:href="@{/images/favicon/apple-icon-72x72.png}" />
     <link rel="apple-touch-icon" sizes="76x76" href="../static/images/favicon/apple-icon-76x76.png" th:href="@{/images/favicon/apple-icon-76x76.png}" />
@@ -26,10 +26,10 @@
     <link rel="manifest" href="/manifest.json" />
     <meta name="msapplication-TileColor" content="#ffffff" />
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
-    <meta name="theme-color" content="#ffffff" />
+    <meta name="theme-color" content="#ffffff" /> -->
     <!-- End of Favicon Content  -->
 
-</head>
+<!-- </head> -->
 
 <!-- <body id="login-page">
   <section>
@@ -65,8 +65,16 @@
   <script th:src="@{https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js}"
           src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script th:src="@{/js/signup.js}" src="../static/js/signup.js"></script>
-</body> -->
+</body>
+</html>-->
 
+
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head>
+    <meta charset="UTF-8" />
+    <title>Forgot Your Password?</title>
+</head>
 <body>
 
 <form action="forgotPasswordForm.html" th:action="@{/passwordResetEmail}">
@@ -76,10 +84,9 @@
             Please enter your email address <input type="email" id="searchEmail" name="email" value=""/>
         </label>
     </fieldset>
-    <button>Submit</button>
+    <button>Search</button>
 </form>
 
 
 </body>
-
 </html>
