--- a/src/main/resources/templates/forgotPasswordForm.html
+++ b/src/main/resources/templates/forgotPasswordForm.html
@@ -1,4 +1,5 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,7 +11,7 @@
     <link rel="stylesheet" th:href="@{/css/style.css}" href="../static/css/style.css"/> -->
 
     <!-- Favicon -->
-    <!-- <link rel="apple-touch-icon" sizes="57x57" href="../static/images/favicon/apple-icon-57x57.png" th:href="@{/images/favicon/apple-icon-57x57.png}" />
+    <link rel="apple-touch-icon" sizes="57x57" href="../static/images/favicon/apple-icon-57x57.png" th:href="@{/images/favicon/apple-icon-57x57.png}" />
     <link rel="apple-touch-icon" sizes="60x60" href="../static/images/favicon/apple-icon-60x60.png" th:href="@{/images/favicon/apple-icon-60x60.png}" />
     <link rel="apple-touch-icon" sizes="72x72" href="../static/images/favicon/apple-icon-72x72.png" th:href="@{/images/favicon/apple-icon-72x72.png}" />
     <link rel="apple-touch-icon" sizes="76x76" href="../static/images/favicon/apple-icon-76x76.png" th:href="@{/images/favicon/apple-icon-76x76.png}" />
@@ -26,12 +27,12 @@
     <link rel="manifest" href="/manifest.json" />
     <meta name="msapplication-TileColor" content="#ffffff" />
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
-    <meta name="theme-color" content="#ffffff" /> -->
-    <!-- End of Favicon Content  -->
+    <meta name="theme-color" content="#ffffff" />
+    <!-- End of Favicon Content-->
 
-<!-- </head> -->
+</head>
 
-<!-- <body id="login-page">
+<body id="login-page">
   <section>
     <div class="login-shape"></div>
 
@@ -65,28 +66,5 @@
   <script th:src="@{https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js}"
           src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script th:src="@{/js/signup.js}" src="../static/js/signup.js"></script>
-</body>
-</html>-->
-
-
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8" />
-    <title>Forgot Your Password?</title>
-</head>
-<body>
-
-<form action="forgotPasswordForm.html" th:action="@{/passwordResetEmail}">
-    <fieldset>
-        <legend>Find Your Account</legend>
-        <label for="searchEmail">
-            Please enter your email address <input type="email" id="searchEmail" name="email" value=""/>
-        </label>
-    </fieldset>
-    <button>Search</button>
-</form>
-
-
 </body>
 </html>
