--- a/src/main/resources/templates/forgotPasswordForm.html
+++ b/src/main/resources/templates/forgotPasswordForm.html
@@ -1,4 +1,5 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,10 +8,10 @@
     <script th:href="@{https://use.fontawesome.com/f2bdd0ae67.js}" src="https://use.fontawesome.com/f2bdd0ae67.js"></script>
     <link th:href="@{https://fonts.googleapis.com/css?family=Signika:300,400,700}" href="https://fonts.googleapis.com/css?family=Signika:300,400,700" rel="stylesheet"/>
     <link rel="stylesheet" th:href="@{/css/normalize.css}" href="../static/css/normalize.css"/>
-    <link rel="stylesheet" th:href="@{/css/style.css}" href="../static/css/style.css"/> -->
+    <link rel="stylesheet" th:href="@{/css/style.css}" href="../static/css/style.css"/>
 
     <!-- Favicon -->
-    <!-- <link rel="apple-touch-icon" sizes="57x57" href="../static/images/favicon/apple-icon-57x57.png" th:href="@{/images/favicon/apple-icon-57x57.png}" />
+    <link rel="apple-touch-icon" sizes="57x57" href="../static/images/favicon/apple-icon-57x57.png" th:href="@{/images/favicon/apple-icon-57x57.png}" />
     <link rel="apple-touch-icon" sizes="60x60" href="../static/images/favicon/apple-icon-60x60.png" th:href="@{/images/favicon/apple-icon-60x60.png}" />
     <link rel="apple-touch-icon" sizes="72x72" href="../static/images/favicon/apple-icon-72x72.png" th:href="@{/images/favicon/apple-icon-72x72.png}" />
     <link rel="apple-touch-icon" sizes="76x76" href="../static/images/favicon/apple-icon-76x76.png" th:href="@{/images/favicon/apple-icon-76x76.png}" />
@@ -26,15 +27,14 @@
     <link rel="manifest" href="/manifest.json" />
     <meta name="msapplication-TileColor" content="#ffffff" />
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
-    <meta name="theme-color" content="#ffffff" /> -->
+    <meta name="theme-color" content="#ffffff" />
     <!-- End of Favicon Content  -->
 
-<!-- </head> -->
+</head>
 
-<!-- <body id="login-page">
+<body id="login-page">
   <section>
     <div class="login-shape"></div>
-
     <div class="login-input">
       <div class="login-header">
         <img src="../static/images/teacher-talk-logo.gif" th:src="${'images/teacher-talk-logo.gif'}"
@@ -58,35 +58,11 @@
             </fieldset>
             <button class="update">Submit</button>
         </form>
-
     </div>
   </section>
-
   <script th:src="@{https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js}"
           src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script th:src="@{/js/signup.js}" src="../static/js/signup.js"></script>
 </body>
-</html>-->
-
-
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8" />
-    <title>Forgot Your Password?</title>
-</head>
-<body>
-
-<form action="forgotPasswordForm.html" th:action="@{/passwordResetEmail}">
-    <fieldset>
-        <legend>Find Your Account</legend>
-        <label for="searchEmail">
-            Please enter your email address <input type="email" id="searchEmail" name="email" value=""/>
-        </label>
-    </fieldset>
-    <button>Search</button>
-</form>
-
-
-</body>
 </html>
+
