--- a/src/main/resources/templates/changePasswordForm.html
+++ b/src/main/resources/templates/changePasswordForm.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -37,8 +38,10 @@
 
     <div class="login-input">
       <div class="login-header">
+          <a href = "login.html" th:href="@{/}">
         <img src="../static/images/teacher-talk-logo.gif" th:src="${'images/teacher-talk-logo.gif'}"
              alt="teacher talk logo"/>
+          </a>
         <div class="tagline clearfix">
             <h1>Teacher Talk</h1>
             <h3>Empowering <span class="bold">Education</span> Through Better <span
