--- a/src/main/resources/templates/changePasswordForm.html
+++ b/src/main/resources/templates/changePasswordForm.html
@@ -53,7 +53,7 @@
           <legend>Reset Your Password</legend>
           <div class="input-wrapper">
             <input type="text" name="password"/>
-            <label id="emailLabel" for="loginEmail" class="loginEmail">Enter Password</label>
+            <label id="emailLabel" class="loginEmail">Enter Password</label>
           </div>
 
           <input type="hidden" name="userId" th:value="${userId}"/>
