working on bug with template add

--- a/src/main/resources/templates/parent.html
+++ b/src/main/resources/templates/parent.html
@@ -38,15 +38,15 @@
       <div class="faq-content">
         <div class="question">
           <h3>What is Teacher Talk?</h3>
-          <p>Teacher Talk is an app developed to empower education by streamlining the process of communication between teachers and parents.  </p>
+          <p>Teacher Talk is an app developed to empower education by streamlining the process of communication between teachers and parents. </p>
         </div>
         <div class="question">
           <h3>Why is this useful?</h3>
-          <p>Teacher talk allows you to manage your contact information in one place for all of your students teachers. No more filling out form after form from different teachers with the same information. </p>
+          <p>Teacher Talk allows parents to manage their contact information all in one place. No more filling out form after form from different teachers with the same information. By maintaining your best contact information here, all of your student's teachers have the ability to quickly and easily to keep you informed on your student's progress in the classroom.  </p>
         </div>
         <div class="question">
           <h3>How does it work?</h3>
-          <p>Once you have signed up for an account and entered your contact information your job is done. All teachers will have access to your best contact information to help keep you informed about your students. Make sure to log back and update your information whenver it changes</p>
+          <p>Once you have signed up for an account and entered your contact information your job is done. All teachers will have access to your best contact information to help keep you informed about your students. Make sure to log back and update your information whenever it changes.</p>
         </div>
       </div>
     </div>
