--- a/src/main/resources/templates/parent.html
+++ b/src/main/resources/templates/parent.html
@@ -123,7 +123,7 @@
           </div>
           <aside class="border-seperation"></aside>
 
-          <div class="addContact">Add Another Student <span class="plus">+</span></div>
+          <div class="addContact"><span class="addStudent2">Add Another Student</span> <span class="plus">+</span></div>
           <div class="contactInfo">
             <div class="input-wrapper">
               <input type="text" id="registerStudentSecondaryFirstName" name="registerStudentSecondaryFirstName" required="required"/>
@@ -144,7 +144,7 @@
 
             <!-- 3rd Student -->
             <div class="border-seperation"></div>
-            <div class="addContact thirdStudent">Add Another Student <span class="plus">+</span></div>
+            <div class="addContact thirdStudent"><span class="addStudent3">Add Another Student</span> <span class="plus">+</span></div>
             <div class="contactInfo">
               <div class="input-wrapper">
                 <input type="text" id="registerStudentTertiaryFirstName" name="registerStudentTertiaryFirstName" required="required"/>
