--- a/src/main/resources/static/css/partials/_teacher.scss
+++ b/src/main/resources/static/css/partials/_teacher.scss
@@ -40,7 +40,7 @@
 //   top: 0px;
 //   border: 1px solid blue;
 
-  .fa-eye-slash {
+.fa-eye, .fa-eye-slash {
     position: absolute;
     top: -25px;
     right: 30px;
