--- a/src/main/resources/templates/teacher.html
+++ b/src/main/resources/templates/teacher.html
@@ -156,7 +156,7 @@
 
     <div class="message-container">
       <div class="message">
-          <i class="fa fa-eye-slash" aria-hidden="true"></i>
+          <i class="fa fa-eye-slash tourclick" aria-hidden="true"></i>
           <button id="startTour">Start Tour</button>
         <div class="message-wrapper">
           <div class="container-title">New Message</div>
