added carot to menu on teacher page and debugged font awesome icon glitch on message body

--- a/src/main/resources/static/css/partials/_header.scss
+++ b/src/main/resources/static/css/partials/_header.scss
@@ -58,6 +58,11 @@ nav {
   }
 }
 
+// Carot Style
+.fa-angle-down, .fa-angle-up {
+  font-weight: 700;
+}
+
 // Header Toggle Field Inputs
 #updateProfile, #addStudent, #addTemplate {
   display:none;
