fixed parent registration button

--- a/src/main/resources/templates/parent.html
+++ b/src/main/resources/templates/parent.html
@@ -183,9 +183,9 @@
           <aside class="border-seperation"></aside>
 
         </fieldset>
-        <button type="submit" class="update">Register</button>
+        <!--<button type="submit" class="update">Register</button>-->
       </form>
-      <!-- <a href="login.html" th:href="@{/}"><button type="submit" class="update">Register</button></a> -->
+       <a href="login.html" th:href="@{/}"><button type="submit" class="update">Register</button></a>
     </div>
   </section>
 
