changed messageLog format

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -53,8 +53,8 @@
                 <label id="emailLabel" for="loginEmail" class="loginEmail">Email</label>
             </div>
             <div class="input-wrapper">
-                <input type="password" id="loginPassword" name="loginPassword" th:value="${userPassword}"/>
-                <label id="passwordLabel" for="loginPassword" class="loginPassword">Password </label>
+                <input type="password" id="loginPasswordMain" name="loginPassword" th:value="${userPassword}"/>
+                <label id="passwordLabel" for="loginPasswordMain" class="loginPassword">Password </label>
             </div>
 
 
